# codewars-katas-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Scripts/: Kata.sh
Scripts/CMake/: Conan.cmake
